<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="@color/common_border_color"></android.support.v7.widget.Toolbar>
   <!--Email-->
    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:padding="8dp"></EditText>
    <!--Password -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword" />
    <!--Re-Enter Password-->
    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/re_enter_password"
        android:gravity="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:hint="@string/confirm" />
</LinearLayout>