<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.something.android.kickstartcab.Fragment.HelpFragment">
    //Toolbar
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="@color/common_border_color">
    </android.support.v7.widget.Toolbar>

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <Button
        android:id="@+id/expandableButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/contact_us"
        android:textColor="@color/white" />

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expandableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expandableButton1"
        android:background="#90ba1f04"
        android:padding="16dp"
        app:ael_duration="600"
        app:ael_expanded="false"
        app:ael_interpolator="accelerateDecelerate"
        app:ael_orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="18dp"
                android:ellipsize="end"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:ellipsize="end"
                android:textSize="20dp"
                />
            <!--Extra Thing-->
            <EditText
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/area"
                android:inputType="textCapSentences|textAutoCorrect" />
        </LinearLayout>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <Button
            android:id="@+id/expandableButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expandableLayout1"
            android:background="@color/colorPrimary"
            android:text="@string/outstation_package"
            android:textColor="#fff" />

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton2"
            android:background="@color/settings_background"
            android:padding="16dp"
            app:ael_duration="600"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_to_website"
                    android:textSize="18dp"
                    android:ellipsize="end"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/website_link"
                    android:textSize="18dp"
                    android:textColorLink="#000"
                    android:ellipsize="end"
                    android:autoLink="web"
                    />
                <!--Extra Thing-->
                <EditText
                    android:id="@+id/area2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/area"
                    android:inputType="textCapSentences|textAutoCorrect" />
            </LinearLayout>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        <Button
            android:id="@+id/expandableButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expandableLayout2"
            android:background="@color/colorPrimaryDark"
            android:text="@string/inside_city_car"
            android:textColor="#fff" />

        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:id="@+id/expandableLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/expandableButton3"
            android:background="@color/settings_background"
            android:padding="16dp"
            app:ael_duration="600"
            app:ael_expanded="false"
            app:ael_interpolator="accelerateDecelerate"
            app:ael_orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inside_city_charges_details_car"
                    android:textSize="18dp"
                    android:ellipsize="end"
                    />
                <!--Extra Thing-->
                <EditText
                    android:id="@+id/area3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/area"
                    android:inputType="textCapSentences|textAutoCorrect" />
            </LinearLayout>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
    </RelativeLayout>
</FrameLayout>
