<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/header_gradient"
    tools:context="com.something.android.kickstartcab.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/mywidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_alignParentRight="true"
            android:lines="1"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textColor="@color/text_red_colour"
            android:text="@string/important_info" />
        <!-- Book A Cab -->
        <Button
            android:id="@+id/bookCab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:onClick="selfDestruct"
            android:layout_gravity="center"
            android:text="@string/book_a_cab"
            android:background="@color/colorPrimary"/>
        <!--Book A Driver -->
        <Button
            android:id="@+id/bookDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookCab"
            android:layout_marginTop="70dp"
            android:onClick="selfDestruct"
            android:layout_gravity="center"
            android:text="@string/book_a_driver"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</FrameLayout>